# NB-SOUND

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  ajustes_finales_nb_sound_escritorio  conftest.py  main.py  main_ui.py  pyproject.toml  requirements-audio-intelligence.txt  requirements-dev.txt  requirements-release.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: settings.py
core/: assets_pipeline.py  audio_analysis_runs.py  audio_analytics.py  audio_feature_store.py  audio_features.py  audio_intelligence_background.py  audio_intelligence_deep.py  audio_intelligence_deep_subprocess.py  audit.py  dedupe.py  discography.py  discovery.py  enrichment_pipeline.py  import_recovery_service.py  manifests.py  matcher.py  music_discovery_service.py  normalizer.py  overrides.py  pipeline.py  second_stage.py  third_stage.py  validator.py  writer.py
db/: conexion.py  esquema.py
docs/: architecture.md  audio-features.md  audio-pipeline.md  background-processing.md  cli.md  configuration.md  cross-platform.md  dj_privado.md  explorador-ciego.md  import-lifecycle.md  installation.md  karaoke.md  license-es.md  mobile-ecosystem.md  mobile-rollout-plan.md  observability.md  plan_item7_ecualizador_y_opciones_reproductor.md  playback-architecture.md  qml-architecture.md  recovery-and-resilience.md  requirements.md  troubleshooting.md  ui.md
domain/: models.py
infra/: binarios.py  bootstrap.py  deep_runner.py  dependencias.py  execution_control.py  instalador.py  logger.py  modelos_essentia.py  processed.py  progress.py  quarantine.py  reports.py  tls_local.py  version.py
packaging/: README.md  _common.py  pyi_rth_linux_vlc.py  pyi_rth_windows_stdio.py
packaging/linux/: build.sh  com.nbsound.NBSound.metainfo.xml  nb-sound-launcher  nb-sound.desktop  nb_sound.spec
packaging/macos/: build.sh  nb_sound.spec
packaging/windows/: build.ps1  installer.nsi  nb_sound.spec
servicios/: __init__.py  backup.py  biblioteca.py  dedupe_observable.py  importacion.py  indexador.py  reproductor.py  servidor_sync.py  sync_repositorio.py
servicios/dj_privado/: __init__.py  constructor.py  embeddings.py  errores.py  hardware_profile.py  intencion.py  mix_engine.py  narrativa.py  ontologia.py  ownership.py  persistencia.py  reproductor_sesion.py  scheduler.py  servicio.py  stems_karaoke.py  stems_prefetch.py  transiciones.py
servicios/explorador_ciego/: __init__.py  hints.py  modelos.py  selectores.py  servicio.py
servicios/karaoke/: __init__.py  backend.py  cola.py  errores.py  jobs_repo.py  modelo.py  rutas.py  separador.py
tests/: conftest.py  test_assets_pipeline.py  test_audio_analysis_runs_jobs.py  test_audio_features_basic.py  test_audio_intelligence_background.py  test_audio_intelligence_deep_fallback.py  test_audit_repair.py  test_backup.py  test_backup_programado.py  test_biblioteca_busqueda.py  test_biblioteca_portadas.py  test_biblioteca_recargar_conserva_orden.py  test_binarios.py  test_bootstrap.py  test_cache_behavior.py  test_cierre_ordenado.py  test_cli_modes.py  test_config_validation.py  test_db_recovery.py  test_dedupe.py  test_dedupe_observable.py  test_dedupe_precarga.py  test_dedupe_promocion_writer.py  test_deep_analytics_windows.py  test_deep_manifest_write.py  test_dependencias.py  test_discography_organizer.py  test_dj_hardware_profile.py  test_dj_mix_engine.py  test_dj_persistencia_sesion.py  test_dj_privado_integracion.py  test_dj_privado_ontologia.py  test_dj_privado_scheduler.py  test_dj_refactor_profundo.py  test_dj_reproductor_sesion.py  test_dj_stems_prefetch.py  test_dj_transicion_gate.py  test_dj_vlc_compartido.py  test_dry_run_safety.py  test_eliminar_pista.py  (+58 more)
ui/: modelos_qml.py
ui/qml/: Principal.qml
ui/qml/componentes/: AnimatedPlaybackBackground.qml  AppCard.qml  AppScrollBar.qml  AppText.qml  BarraReproduccion.qml  DecisionPanel.qml  EmptyState.qml  KaraokeFileDialog.qml  (+10 more)
utils/: diccionarios.py  network.py  text.py
workers/: workers_qt.py
(+20 files in other folders)
